--- a/CharacomImagerPro/CharacomImagerPro.csproj
+++ b/CharacomImagerPro/CharacomImagerPro.csproj
@@ -203,6 +203,11 @@
     <Compile Include="PrintParts.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="PropertyDisplay.cs" />
     <Compile Include="RangeCompare.cs">
       <SubType>Form</SubType>
@@ -308,6 +313,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PluralCheckUp.resx">
       <DependentUpon>PluralCheckUp.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="RangeCompare.resx">
       <DependentUpon>RangeCompare.cs</DependentUpon>
